[FIX] some fixes to allow other file formats, the very pre-alpha, ust out of curiosity

--- a/crates/gldf-rs-wasm/index.html
+++ b/crates/gldf-rs-wasm/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>GLDF Editor</title>
+    <title>GLDF Viewer</title>
 
     <link data-trunk rel="css" href="src/static/styles.css">
+    <link data-trunk rel="copy-file" href="src/static/slv_tria_2.gldf" />
     <link data-trunk rel="copy-file" href="src/static/bevy-loader.js" />
-    <link data-trunk rel="rust" data-bin="gldf_rs_wasm" data-wasm-opt="0" />
+    <link data-trunk rel="rust" data-bin="gldf_rs_wasm" data-wasm-opt="z" />
 </head>
 <body>
     <script src="bevy-loader.js"></script>
