--- a/crates/gldf-rs-wasm/index.html
+++ b/crates/gldf-rs-wasm/index.html
@@ -8,7 +8,7 @@
     <link data-trunk rel="css" href="src/static/styles.css">
     <link data-trunk rel="copy-file" href="src/static/slv_tria_2.gldf" />
     <link data-trunk rel="copy-file" href="src/static/bevy-loader.js" />
-    <link data-trunk rel="rust" data-bin="gldf_rs_wasm" data-wasm-opt="z" />
+    <link data-trunk rel="rust" data-bin="gldf_rs_wasm" data-wasm-opt="" />
 </head>
 <body>
     <script src="bevy-loader.js"></script>
